--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="efea79">  <td>18/04/26 06:31:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Landsend.salesOrder()[pri:0, instance:week2day2.Landsend@5649fd9b]">salesOrder</td> 
-  <td>main@660143728</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>18/05/11 21:51:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertSnapUsingRobotClass.takeSnap()[pri:0, instance:challenge.AlertSnapUsingRobotClass@5442a311]">takeSnap</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
 </table>
